business logic improved version 0.1
