# src/binance/binance.controller.ts
@@ -2,7 +2,7 @@ import { Request, Controller, Get, Post, Body } from '@nestjs/common';
 import { BinanceService } from './binance.service';
 import { ApiBody, ApiCreatedResponse, ApiTags } from '@nestjs/swagger';
 
-import { CreatePositionDto } from './dto/create-position';
+import { OpenPositionDto } from './dto/create-position';
 import { FuturesOrderDto } from './dto/binance.dto';
 @ApiTags('binance')
 @Controller('binance')
@@ -16,14 +16,14 @@ export class BinanceController {
 
     @Post('tradingview-webhook')
     @ApiBody({
-        type: CreatePositionDto
+        type: OpenPositionDto
     })
     @ApiCreatedResponse({
         type: FuturesOrderDto,
         description: "Position created."
     })
-    async webhook(@Body() createPositionDto: CreatePositionDto) {
-        // return await this.binanceService.webhook(createPositionDto)
+    async webhook(@Body() createPositionDto: OpenPositionDto) {
+        return await this.binanceService.webhook(createPositionDto)
     }
 
 }
